updated gitignore for large data files

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,9 @@ Matlab_codes/SAVE_DATA
 *.csv
 *.xlsx
 *.zip
-
+K_eqt_Finall.mat
+K_eqt_VALDN_Dec2.mat
+K_eqt_VALDN_test2.mat
 # Ignore all text files
 *.txt
 *.dat
